test/test_11710324_5.out
Error type B at Line 4: Missing closing ']'
Error type A at Line 5: unknown lexeme 0w0
Error type A at Line 5: unknown lexeme '\xjd'
Error type B at Line 0: Missing semicolon ';'
Error type B at Line 6: Missing closing ']'
