test/test_11710324_5.spl
int test_1_m01(int a, int b)
{
  int code[10], new;
  code[10 = 10;
  0w0 = '\xjd'
  return code[new[0];
}